# service/orders_exchange_service/models.go
@@ -125,6 +125,7 @@ type OpOrderInfoResp struct {
 	FollowersLimit   string `json:"followersLimit"`
 	LiquidityPerMint int64  `json:"liquidityPerMint"`
 	StartBlockHeight string `json:"startBlockHeight"`
+	EndBlockHeight   string `json:"endBlockHeight"`
 	Qual             string `json:"qual"`
 	PinCheck         string `json:"pinCheck"`
 	PayCheck         string `json:"payCheck"`
@@ -132,6 +133,7 @@ type OpOrderInfoResp struct {
 	//QualLevel         int64                    `json:"qualLevel"`
 	//QualCount         int64                    `json:"qualCount"`
 	UsedPins          []string                 `json:"usedPins"`
+	Holders           int64                    `json:"holders"`
 	TxId              string                   `json:"txId"`
 	BlockHeight       int64                    `json:"blockHeight"`
 	ConfirmationState models.ConfirmationState `json:"confirmationState"`
@@ -236,4 +238,28 @@ type FetchIdCoinsDeployCheckRequest struct {
 type FetchIdCoinsDeployCheckResp struct {
 	CanDeploy bool   `json:"canDeploy"`
 	Msg       string `json:"msg"`
+}
+
+type RefundIdCoinsValidPreRequest struct {
+	Address string `json:"address"`
+	OrderId string `json:"orderId"`
+}
+
+type RefundIdCoinsValidCommitRequest struct {
+	OrderId string `json:"orderId"`
+	PsbtRaw string `json:"psbtRaw"`
+}
+
+type RefundIdCoinsValidPreResp struct {
+	OrderId       string `json:"orderId"`
+	RefundAddress string `json:"refundAddress"`
+	RefundAmount  int64  `json:"refundAmount"`
+	PsbtRaw       string `json:"psbtRaw"`
+}
+
+type RefundIdCoinsValidCommitResp struct {
+	OrderId       string `json:"orderId"`
+	RefundAddress string `json:"refundAddress"`
+	RefundAmount  int64  `json:"refundAmount"`
+	TxId          string `json:"txId"`
 }
